RESOLVED FIXED18905
[GTK] Fix build with older pango (1.14.8)
https://bugs.webkit.org/show_bug.cgi?id=18905
Summary [GTK] Fix build with older pango (1.14.8)
Gwenole Beauchesne
Reported 2008-05-06 03:58:18 PDT
WebKit doesn't build with older pango, e.g. 1.14.8 from Debian/etch. Please either require pango >= 1.15.2 or apply a patch similar to the attachment.
Attachments
Fix build with older pango (1.67 KB, patch)
2008-05-06 04:04 PDT, Gwenole Beauchesne
eric: review+
Gwenole Beauchesne
Comment 1 2008-05-06 04:04:18 PDT
Created attachment 20981 [details] Fix build with older pango This is a literal copy for pango sources. Note that the PANGO_VERSION_CHECK() macro appeared along with the missing functions pango_layout_get_line_readonly() and pango_language_get_default(). i.e. I am not testing for !PANGO_VERSION_CHECK(1,15,2). An alternative could be to AC_CHECK_FUNCS(pango_layout_get_line_readonly) and dependent on the generated HAVE_FUNCTION thing.
Jan Alonzo
Comment 2 2008-07-25 20:24:55 PDT
Hi Gwenole. Is your patch for review? If so, please set the review flag to '+' so reviewers will notice your patch.
Pierre-Luc Beaudoin
Comment 3 2008-07-28 07:56:52 PDT
Actually, if the patch is ready to be reviewed, you should set the review flag to "?". Then, once it has been reviewed, the reviewer will set the flag to '+' or '-' depending on the outcome.
Jan Alonzo
Comment 4 2008-09-23 15:48:47 PDT
Comment on attachment 20981 [details] Fix build with older pango setting the patch for review...
Eric Seidel (no email)
Comment 5 2008-09-24 01:28:46 PDT
Comment on attachment 20981 [details] Fix build with older pango I think it's cleaner to pull in code from other libraries in separate headers/cpp files. That makes it much easier (in my mind) to justify the WebKit style violation, if the whole file is of that separate style.
Eric Seidel (no email)
Comment 6 2008-09-24 15:38:46 PDT
Comment on attachment 20981 [details] Fix build with older pango Tis fine though.
Jan Alonzo
Comment 7 2008-09-26 23:48:44 PDT
Landed in r36990. Thanks!
Note You need to log in before you can comment on or make changes to this bug.