2008-09-26  Gwenole Beauchesne  <gbeauchesne@splitted-desktop.org>

Reviewed by Eric Seidel.

        http://bugs.webkit.org/show_bug.cgi?id=18905
        [GTK] Fix build with older pango (1.14.8)

        * platform/graphics/gtk/FontGtk.cpp:
        * platform/gtk/Language.cpp:
        (_pango_get_lc_ctype):
        (pango_language_get_default):

Canonical link: https://commits.webkit.org/29258@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@36990 268f45cc-cd09-0410-ab3c-d52691b4dbfc